fixing swagger doc
