# docs/swagger.json
@@ -16,7 +16,7 @@
                     "text/xml"
                 ],
                 "tags": [
-                    "HolyDays"
+                    "HoliDays"
                 ],
                 "summary": "Get",
                 "parameters": [
@@ -46,6 +46,15 @@
                     }
                 ],
                 "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/http.HoliDay"
+                            }
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -67,6 +76,26 @@
                 "message": {
                     "type": "string",
                     "example": "error"
+                }
+            }
+        },
+        "http.HoliDay": {
+            "type": "object",
+            "properties": {
+                "date": {
+                    "type": "string"
+                },
+                "extra": {
+                    "type": "string"
+                },
+                "inalienable": {
+                    "type": "boolean"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
                 }
             }
         }
